--- a/templates/bookletbet.template
+++ b/templates/bookletbet.template
@@ -12,7 +12,7 @@
 
 \usepackage{fontspec}
 \usepackage{xunicode}
-\defaultfontfeatures{Ligatures=Historic,Contextuals=Alternate,Numbers=OldStyle,RawFeature={+dlig}}
+\defaultfontfeatures{Numbers={OldStyle},RawFeature={+dlig}}
 \setmainfont[RawFeature={+dlig},ItalicFeatures={RawFeature=+cv04,CharacterVariant=5:2}]{EB Garamond}
 % Do the replacements manually in titles, to not ruin the textsc
 \newfontfamily\booktitlefont[RawFeature={-ss02},LetterSpace=40,WordSpace=6]{EB Garamond}
@@ -281,8 +281,8 @@
 % Margins, etc:
 % the `geometry` package makes for convenient adjusting of margins, which is what
 % you asked about.  Of course it can do much more, even make coffee for you:
-% \usepackage{geometry}
-% \geometry{verbose,letterpaper,tmargin=3cm,bmargin=3cm,lmargin=3cm,rmargin=3cm}
+\usepackage{geometry}
+\geometry{verbose,tmargin=2cm,bmargin=2.5cm,lmargin=1cm,rmargin=1cm}
 % so if you just keep a copy of this template in the directory you are working in, you
 % can adjust the margins by going into this file and messing with the margins.
 % the syntax is very unforgiving, but permits 3cm and 2.5in and some other things.
